--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <div id="root">
         <header>
+<!-- Nav -->
             <nav>
                 <img src="img/dark-logo.png" alt="">
                 <div class="li-nav">
@@ -32,8 +33,8 @@
             <div class="container">
                 <div class="left">
                     <h2>Complete Your <br> Dreams in JavaS <br> Programming</h2>
-                    <p class="my-4">Learn any coding program in distance and for a reasonable fee. You don't have to struggle alone, you've got our assistance and help.</p>
-                    <button><i class="fas fa-download mx-3"></i>Download Free E-book</button>
+                    <p class="my-4 my-5">Learn any coding program in distance and for a <br> reasonable fee. You don't have to struggle alone, <br> you've got our assistance and help.</p>
+                    <button class="my-5"><i class="fas fa-download mx-3"></i>Download Free E-book</button>
                 </div>
                 <div class="right">
                     <img src="img/home-5-hero-image-279x300.png" alt="">
@@ -41,6 +42,7 @@
             </div>
         </header>
 <!-- Main -->
+<!-- Build Your Dream -->
         <main>
             <section>
                 <div class="container">
@@ -79,7 +81,7 @@
                     <h5><a href="#">Start now </a><i class="fas fa-arrow-right"></i></h5>
                 </div>
             </section>
-
+<!-- Career Perspective -->
             <section>
                 <div class="container">
                     <div class="left">
@@ -106,7 +108,7 @@
                     </div>
                 </div>
             </section>
-
+<!-- Numbers HR -->
             <section>
                 <div class="container numbers">
                     <div class="center">
@@ -162,7 +164,7 @@
                         <span><i class="fas fa-user"></i> 33 Students</span>
                     </div>
                 </div>
-
+<!-- Latest Featured -->
                 <div class="container">
                     <div class="card teacher">
                         <img class="featured-img" src="img/stock-full-hd-06-480x298.jpg" alt="">
@@ -192,7 +194,7 @@
                 <div class="container">
                     <button>View all courses <i class="fas fa-arrow-right"></i></button>
             </section>
-
+<!-- Questions -->
             <section>
                 <div class="container">
                     <div class="left">
@@ -220,12 +222,12 @@
                         <h1>Learn on your </h1>
                         <h1 class="today">mobile </h1>
                         <h1>anytime!</h1>
-                        <p>Save lessons for later and revise or write notes at any time and on multiple devices on your way. Never interfere with activities of enjoyment or other precious moments.</p>
+                        <p class="my-5">Save lessons for later and revise or write notes at any time and on multiple devices on your way. Never interfere with activities of enjoyment or other precious moments.</p>
                         <button class="my-5">Download Our App</button>
                     </div>
                 </div>
             </section>
-<!-- People Feedback -->
+<!-- Tutor -->
             <section>
                 <div class="container">
                     <h6 class="my-8">PEOPLE ARE PRAISING MAXCOACH</h6>
@@ -245,28 +247,30 @@
                     <div class="people-card mx-4">
                         <img src="img/testimonial-avata-02.jpg" alt="">
                         <p>MaxCoach is my best choice. Their tutors are smart and professional when dealing with students.</p>
-                        <h5 class="my-8">MINA HOLLACE</h5>
-                        <h6>/ Freelancer</h6>
+                        <h5 class="my-8">MADLEY PONDOR</h5>
+                        <h6>/ IT Specialist</h6>
 
                     </div>
                     <div class="people-card mx-4">
                         <img src="img/testimonial-avata-04.jpg" alt="">
                         <p>| am happy with their arrangement of lessons and subjects. They reflect a scientific investigation.</p>
-                        <h5 class="my-8">MINA HOLLACE</h5>
-                        <h6>/ Freelancer</h6>
+                        <h5 class="my-8">LUVIC DUBBLE</h5>
+                        <h6>/ Private Tutor</h6>
 
                     </div>
             </section>
-
+<!-- Get started -->
             <section class="m-t">
                 <div class="container">
-                    <h6><b>Start today for getting </b><span class="today">Online Certification</span></h6>
+                    <h6 class="my-5"><b>Start today for getting </b><span class="today">Online Certification</span></h6>
                 </div>
                 <div class="container">
                     <h1>You can be your own guiding star with our help!</h1>
+                    <img class="dec2" src="img/maxcoach-shape-01.png" alt="">
                 </div>
                 <div class="container">
                     <button class="my-5">Get started now</button>
+                    <img class="dec1" src="img/maxcoach-shape-02.png" alt="">
                 </div>
             </section>
         </main>
@@ -316,8 +320,6 @@
             </div>
         </footer>
     </div>
-
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.4/dayjs.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="dist/js/main.js"></script>
